--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-gateway-service",
+  "name": "carsome-api",
   "version": "0.1.0",
   "description": "An API Gateway microservice",
   "author": "Ziyad Sfaxi",
@@ -21,73 +21,73 @@
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "dependencies": {
-    "acorn": "^7.1.0",
-    "async": "^3.2.0",
-    "bcrypt-nodejs": "^0.0.3",
-    "bluebird": "^3.7.2",
-    "body-parser": "^1.19.0",
-    "compression": "^1.7.4",
-    "dotenv": "^8.2.0",
-    "errorhandler": "^1.5.1",
-    "express": "^4.17.1",
+    "acorn": "7.1.0",
+    "async": "3.2.0",
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "3.7.2",
+    "body-parser": "1.19.0",
+    "compression": "1.7.4",
+    "dotenv": "8.2.0",
+    "errorhandler": "1.5.1",
+    "express": "4.17.1",
     "express-flash": "0.0.2",
-    "express-session": "^1.17.0",
-    "express-validator": "^6.4.0",
-    "fbgraph": "^1.4.4",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "lusca": "^1.6.1",
-    "mongoose": "^5.9.2",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5",
-    "validator": "^12.2.0",
-    "winston": "^3.2.1"
+    "express-session": "1.17.0",
+    "express-validator": "6.4.0",
+    "fbgraph": "1.4.4",
+    "jsonwebtoken": "8.5.1",
+    "lodash": "4.17.15",
+    "lusca": "1.6.1",
+    "mongoose": "5.9.2",
+    "request": "2.88.2",
+    "request-promise": "4.2.5",
+    "validator": "12.2.0",
+    "winston": "3.2.1"
   },
   "devDependencies": {
-    "@types/async": "^3.0.8",
-    "@types/bcrypt-nodejs": "^0.0.30",
-    "@types/bluebird": "^3.5.29",
-    "@types/body-parser": "^1.19.0",
-    "@types/chai": "^4.2.9",
-    "@types/compression": "^1.7.0",
-    "@types/concurrently": "^4.1.1",
-    "@types/connect-mongo": "^3.1.3",
-    "@types/errorhandler": "^0.0.32",
-    "@types/eslint": "^6.1.8",
-    "@types/express": "^4.17.2",
+    "@types/async": "3.0.8",
+    "@types/bcrypt-nodejs": "0.0.30",
+    "@types/bluebird": "3.5.29",
+    "@types/body-parser": "1.19.0",
+    "@types/chai": "4.2.9",
+    "@types/compression": "1.7.0",
+    "@types/concurrently": "4.1.1",
+    "@types/connect-mongo": "3.1.3",
+    "@types/errorhandler": "0.0.32",
+    "@types/eslint": "6.1.8",
+    "@types/express": "4.17.2",
     "@types/express-flash": "0.0.1",
-    "@types/express-session": "^1.15.16",
-    "@types/jest": "^24.9.1",
-    "@types/jquery": "^3.3.33",
-    "@types/jsonwebtoken": "^8.3.7",
-    "@types/lodash": "^4.14.149",
-    "@types/lusca": "^1.6.1",
-    "@types/mongoose": "^5.7.2",
-    "@types/node": "^12.12.28",
-    "@types/node-sass": "^4.11.0",
-    "@types/nodemailer": "^6.4.0",
-    "@types/passport": "^1.0.2",
-    "@types/passport-facebook": "^2.1.9",
-    "@types/passport-local": "^1.0.33",
-    "@types/pug": "^2.0.4",
-    "@types/request": "^2.48.4",
-    "@types/request-promise": "^4.1.45",
-    "@types/shelljs": "^0.8.6",
-    "@types/supertest": "^2.0.8",
-    "@types/validator": "^12.0.1",
-    "@types/winston": "^2.4.4",
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
-    "chai": "^4.2.0",
-    "concurrently": "^5.1.0",
-    "eslint": "^6.8.0",
-    "jest": "^24.9.0",
-    "node-sass": "^4.13.1",
-    "nodemon": "^1.19.4",
-    "shelljs": "^0.8.3",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.3.0",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.8.2"
+    "@types/express-session": "1.15.16",
+    "@types/jest": "24.9.1",
+    "@types/jquery": "3.3.33",
+    "@types/jsonwebtoken": "8.3.7",
+    "@types/lodash": "4.14.149",
+    "@types/lusca": "1.6.1",
+    "@types/mongoose": "5.7.2",
+    "@types/node": "12.12.28",
+    "@types/node-sass": "4.11.0",
+    "@types/nodemailer": "6.4.0",
+    "@types/passport": "1.0.2",
+    "@types/passport-facebook": "2.1.9",
+    "@types/passport-local": "1.0.33",
+    "@types/pug": "2.0.4",
+    "@types/request": "2.48.4",
+    "@types/request-promise": "4.1.45",
+    "@types/shelljs": "0.8.6",
+    "@types/supertest": "2.0.8",
+    "@types/validator": "12.0.1",
+    "@types/winston": "2.4.4",
+    "@typescript-eslint/eslint-plugin": "2.21.0",
+    "@typescript-eslint/parser": "2.21.0",
+    "chai": "4.2.0",
+    "concurrently": "5.1.0",
+    "eslint": "6.8.0",
+    "jest": "24.9.0",
+    "node-sass": "4.13.1",
+    "nodemon": "1.19.4",
+    "shelljs": "0.8.3",
+    "supertest": "4.0.2",
+    "ts-jest": "24.3.0",
+    "ts-node": "8.6.2",
+    "typescript": "3.8.2"
   }
 }
