--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bluebird": "3.7.2",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "8.2.0",
     "errorhandler": "1.5.1",
     "express": "4.17.1",
@@ -52,6 +53,7 @@
     "@types/compression": "1.7.0",
     "@types/concurrently": "4.1.1",
     "@types/connect-mongo": "3.1.3",
+    "@types/cors": "^2.8.6",
     "@types/errorhandler": "0.0.32",
     "@types/eslint": "6.1.8",
     "@types/express": "4.17.2",
